# rource

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOURCE_RUST_REWRITE_PLAN.md  INSIGHTS_NEXT_SESSION_PROMPT.xml  MIGRATING.md  PERFORMANCE.md  README.md  SECURITY.md  STABILITY.md  cliff.toml  deny.toml  mutants.toml  rust-toolchain.toml  session-6-continuation-prompt.xml  tarpaulin.toml
crates/rource-core/: Cargo.toml
crates/rource-core/benches/: barnes_hut_theta.rs  easing_perf.rs  iai_scene.rs  scene_perf.rs
crates/rource-core/src/: entity.rs  lib.rs
crates/rource-core/src/animation/: mod.rs  spline.rs  tween.rs
crates/rource-core/src/camera/: camera3d.rs  mod.rs
crates/rource-core/src/config/: config_env.rs  config_file.rs  mod.rs  settings.rs
crates/rource-core/src/insights/: activity_heatmap.rs  ai_change_detection.rs  architectural_drift.rs  cadence.rs  change_bursts.rs  change_entropy.rs  change_propagation.rs  churn_volatility.rs  circadian.rs  cognitive_load.rs  commit_coherence.rs  commit_cohesion.rs  commit_complexity.rs  commit_message_entropy.rs  congruence.rs  contextual_complexity.rs  coupling.rs  defect_patterns.rs  defect_prediction.rs  developer_experience.rs  dora_proxy.rs  expertise_profile.rs  focus.rs  focus_drift.rs  growth.rs  hotspot.rs  index.rs  inequality.rs  interface_stability.rs  knowledge.rs  knowledge_currency.rs  knowledge_distribution.rs  knowledge_gini.rs  knowledge_half_life.rs  lifecycle.rs  markov_prediction.rs  mod.rs  modularity.rs  network.rs  onboarding_velocity.rs  (+17 more)
crates/rource-core/src/physics/: barnes_hut.rs  force.rs  mod.rs  optimized.rs  spatial.rs
crates/rource-core/src/scene/: action.rs  bounds_methods.rs  dir_node.rs  file.rs  layout_methods.rs  mod.rs  spatial_methods.rs  stats_methods.rs  tree.rs  user.rs
crates/rource-core/tests/: chaos_tests.rs  load_tests.rs
crates/rource-math/: Cargo.toml
crates/rource-math/benches/: color_perf.rs
crates/rource-math/proofs/: bounds_proofs.rs  color_proofs.rs  mat3_extended_proofs.rs  mat3_proofs.rs  mat4_extended_proofs.rs  mat4_proofs.rs  rect_proofs.rs  utils_proofs.rs  vec2_proofs.rs  vec3_proofs.rs  vec4_proofs.rs
crates/rource-math/proofs/coq/: .gitignore  Bounds.v  Bounds_Compute.v  Bounds_Proofs.v  Color.v  Color_Compute.v  Color_Extract.v  Color_Proofs.v  Complexity.v  FP_Bounds.v  FP_Color.v  FP_Common.v  FP_ErrorBounds.v  FP_Mat.v  FP_Rect.v  FP_Rounding.v  FP_Utils.v  FP_Vec.v  Mat3.v  Mat3_Compute.v  Mat3_Extract.v  Mat3_Proofs.v  Mat4.v  Mat4_Compute.v  Mat4_Extract.v  Mat4_Proofs.v  Rect.v  Rect_Compute.v  Rect_Extract.v  Rect_Proofs.v  RourceMath_Extract.v  Utils.v  Utils_Compute.v  Vec2.v  Vec2_Compute.v  Vec2_Extract.v  Vec2_Proofs.v  Vec2_VerifiedExtract.v  Vec3.v  Vec3_Compute.v  (+19 more)
crates/rource-math/src/: color.rs  lib.rs  mat3.rs  mat4.rs  rect.rs  vec2.rs  vec3.rs  vec4.rs
crates/rource-math/src/kani_proofs/: bounds.rs  color.rs  mat3.rs  mat4.rs  mod.rs  rect.rs  utils.rs  vec2.rs  vec3.rs  vec4.rs
crates/rource-math/tests/: proptests.rs
crates/rource-render/: Cargo.toml
crates/rource-render/benches/: blend_perf.rs  bloom_perf.rs  disc_perf.rs  label_perf.rs  primitive_consolidation.rs  render_scale.rs  texture_batching.rs  visual_perf.rs
crates/rource-render/src/: command.rs  context.rs  default_font.rs  font.rs  helpers.rs  image.rs  label.rs  lib.rs  lod.rs  texture.rs  visual.rs
crates/rource-render/src/backend/: icons.rs  mod.rs  software.rs
crates/rource-render/src/effects/: bloom.rs  mod.rs  shadow.rs
crates/rource-render/tests/: visual_regression.rs
crates/rource-vcs/: Cargo.toml
crates/rource-vcs/benches/: iai_vcs.rs  vcs_parsing.rs
crates/rource-vcs/examples/: memory_benchmark.rs
crates/rource-vcs/src/: cache.rs  commit.rs  compact.rs  detect.rs  error.rs  intern.rs  lib.rs  stream.rs
crates/rource-vcs/src/parser/: bazaar.rs  custom.rs  git.rs  mercurial.rs  mod.rs  svn.rs
crates/rource-vcs/tests/: proptests.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_custom_parser.rs  fuzz_git_parser.rs  fuzz_svn_parser.rs
rource-cli/: Cargo.toml
rource-cli/src/: app.rs  args.rs  avatar.rs  export.rs  headless.rs  helpers.rs  input.rs  main.rs  rendering.rs  window.rs
rource-cli/src/args/: config_methods.rs  help_text.rs  helpers.rs  mod.rs
rource-wasm/: Cargo.toml
rource-wasm/benchmarks/results/: PERFORMANCE_REPORT.md  analysis.py  bench1.txt  bench1_initial.txt  bench2_nobloom.txt  bench3_lowres.txt
rource-wasm/src/: backend.rs  interaction.rs  lib.rs  metrics.rs  playback.rs  png.rs  profiler.rs  render_phases.rs  rendering.rs
rource-wasm/src/render_phases/: actions.rs  directories.rs  files.rs  helpers.rs  label_placer.rs  mod.rs  users.rs  watermark.rs
rource-wasm/src/render_phases/tests/: benchmark_tests.rs  full_frame_bench.rs  helpers_tests.rs  label_placer_tests.rs  mod.rs
rource-wasm/src/wasm_api/: authors.rs  cache.rs  camera.rs  error.rs  export.rs  hover.rs  input.rs  insights.rs  layout.rs  mod.rs  playback.rs  settings.rs  stats.rs
rource-wasm/www/: app.js  index.html  styles.css
rource-wasm/www/js/: animation.js  build-info.js  cached-data.js  config.js  data-loader.js  dom.js  github-fetch.js  indexeddb-cache.js  main-actions.js  main-data-handlers.js  main-lifecycle.js  main.js  preferences.js  state.js  static-logs.js  telemetry.js  timeline-markers.js  toast.js  url-state.js  utils.js  wasm-api.js
rource-wasm/www/js/core/: animation-loop.js  frame-scheduler.js  performance-metrics.js  stats-buffer.js
rource-wasm/www/js/features/: bottom-sheet.js  canvas-input.js  data-input.js  font-size.js  full-map-export.js  fullscreen.js  help.js  hover-tooltip.js  immersive-mode.js  insights-renderers.js  insights-tables.js  insights-utils.js  insights.js  keyboard.js  mobile-controls.js  mobile-toolbar.js  panels.js  playback.js  reduced-motion.js  (+5 more)
rource-wasm/www/pkg/: package.json  rource_wasm.d.ts  rource_wasm.js  rource_wasm_bg.wasm  rource_wasm_bg.wasm.d.ts
rource-wasm/www/styles/: index.css  reset.css  variables.css
(+310 files in other folders)
