[workspace]
resolver = "2"
members = [
    "crates/rource-math",
    "crates/rource-core",
    "crates/rource-vcs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0"
repository = "https://github.com/tomtom215/rource"
authors = ["Rource Contributors"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow certain pedantic lints that are too strict for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Mathematical code often uses single-letter variables (r,g,b,x,y,z)
many_single_char_names = "allow"
# Casting in numerical code is common
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# Allow similar named items for consistency (e.g., from_xyz variants)
similar_names = "allow"
# Allow explicit returns for clarity
needless_return = "allow"
# Allow suboptimal float comparisons in tests
float_cmp = "allow"
# mul_add is more accurate but less readable
suboptimal_flops = "allow"
# Allow items without const fn where it could be
missing_const_for_fn = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
