[workspace]
resolver = "2"
members = [
    "crates/rource-math",
    "crates/rource-core",
    "crates/rource-vcs",
    "crates/rource-render",
    "rource-cli",
    "rource-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "GPL-3.0-only"
repository = "https://github.com/tomtom215/rource"
authors = ["Rource Contributors"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow certain pedantic lints that are too strict for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Mathematical code often uses single-letter variables (r,g,b,x,y,z)
many_single_char_names = "allow"
# Casting in numerical code is common
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# Allow similar named items for consistency (e.g., from_xyz variants)
similar_names = "allow"
# Allow explicit returns for clarity
needless_return = "allow"
# Allow suboptimal float comparisons in tests
float_cmp = "allow"
# mul_add is more accurate but less readable
suboptimal_flops = "allow"
# Allow items without const fn where it could be
missing_const_for_fn = "allow"
# Cargo metadata (readme, keywords, categories) not required for workspace crates
cargo_common_metadata = "allow"
# wgpu brings in multiple versions of bitflags, hashbrown, thiserror
multiple_crate_versions = "allow"
# Rust 1.93+ lint: midpoint() method is clearer but (a + b) / 2 is idiomatic
manual_midpoint = "allow"
# Rust 1.93+ lint: is_multiple_of() is clearer but % n == 0 is idiomatic
manual_is_multiple_of = "allow"

[workspace.dependencies]
# Serialization (optional, for config files)
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
# Fast hash for HashMaps (20-40% faster than std HashMap)
rustc-hash = "2.1"
# Benchmarking
criterion = { version = "0.5", default-features = false }
# iai-callgrind for deterministic instruction-count benchmarks (Valgrind-based)
iai-callgrind = "0.14"
# DHAT for heap profiling (allocation tracking)
dhat = "0.3"
# Tracing infrastructure for Tracy and other profilers
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Tracy client for real-time profiling (optional)
tracing-tracy = "0.11"
# tracing-web for WASM - routes spans to browser console/DevTools
tracing-web = "0.1"
# jemalloc with profiling support (optional, Linux only)
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }

[profile.release]
# Maximum optimization for performance (explicit for documentation)
opt-level = 3
# Full link-time optimization across all crates
lto = true
# Single codegen unit for whole-program optimization
codegen-units = 1
# Abort on panic (removes unwinding code, reduces binary size)
panic = "abort"
# Strip symbols (reduces binary size)
strip = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1

# Profiling profile: release optimizations with debug symbols for profilers
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Flamegraph-optimized profile: good balance for cargo-flamegraph
[profile.flamegraph]
inherits = "release"
debug = 2
strip = false
# Keep frame pointers for better stack traces
# Note: this is set via RUSTFLAGS in the profiling script

# DHAT profiling profile
[profile.dhat]
inherits = "release"
debug = true
strip = false
opt-level = 2  # Slightly lower opt for better attribution
