[package]
name = "rource-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "GPL-3.0-only"
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for Rource - software version control visualization"

[lib]
crate-type = ["cdylib", "rlib"]

# Disable wasm-opt (requires binaryen which may not be available)
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true

[dependencies]
rource-core = { path = "../crates/rource-core" }
rource-render = { path = "../crates/rource-render", features = ["webgl2"] }
rource-vcs = { path = "../crates/rource-vcs" }
rource-math = { path = "../crates/rource-math" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Better panic messages in WASM
console_error_panic_hook = "0.1"

# Web APIs
[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "DomRect",
    # WebGL2 support
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlContextEvent",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
]
