[package]
name = "rource-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "GPL-3.0-only"
repository = "https://github.com/tomtom215/rource"
authors.workspace = true
description = "WebAssembly bindings for Rource - software version control visualization"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt configuration
# We disable wasm-opt here because we run it manually in build-wasm.sh with
# custom flags for better control:
#   -O3: Maximum performance optimization (instead of -Oz for size)
#   --converge: Iterate until no further improvement
#   --low-memory-unused: Enable load/store offset folding
#   --enable-simd: Enable SIMD optimizations
#
# This approach allows us to:
# 1. Show before/after sizes during build
# 2. Use performance-optimized flags (-O3) for the portfolio demo
# 3. Skip optimization gracefully if binaryen is not installed
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true

[features]
default = ["cache"]
# Enable binary cache for 100x faster repeat loads (adds ~11KB gzipped)
cache = ["rource-vcs/cache"]
# Enable detailed performance profiling with Performance API marks/measures
# These show up in browser DevTools Performance tab
profiling = []
# Enable Rust tracing integration - routes tracing spans to browser console
# Useful for function-level timing and call hierarchy
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-web"]

[dependencies]
rource-core = { path = "../crates/rource-core" }
rource-render = { path = "../crates/rource-render", features = ["webgl2", "wgpu"] }
rource-vcs = { path = "../crates/rource-vcs" }
rource-math = { path = "../crates/rource-math" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Better panic messages in WASM
console_error_panic_hook = "0.1"

# wgpu for WebGPU rendering (primary GPU backend)
# webgpu: Enable WebGPU backend for WASM
# webgl: Enable WebGL fallback for browsers without WebGPU
wgpu = { version = "24", features = ["webgpu", "webgl"] }

# Profiling dependencies (optional, enabled with --features profiling or --features tracing)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-web = { version = "0.1", optional = true }

# Web APIs
[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Performance",
    "console",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Element",
    "DomRect",
    # OffscreenCanvas for WebGL2 availability detection
    "OffscreenCanvas",
    # WebGL2 support
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlContextEvent",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    # WebGPU support (primary GPU backend)
    "Gpu",
    "GpuAdapter",
    "GpuAdapterInfo",
    "GpuCanvasContext",
    "GpuDevice",
    "GpuQueue",
    "GpuTexture",
    "GpuTextureView",
    "Navigator",
    # Performance API for profiling
    "PerformanceMark",
    "PerformanceMeasure",
    "PerformanceEntry",
]
