[package]
name = "rource-core"
description = "Core visualization engine for Rource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
config-file = ["dep:serde", "dep:toml"]

[dependencies]
rource-math = { path = "../rource-math" }
regex-lite = "0.1"

# Optional dependencies for config file support
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "scene_perf"
harness = false
