[package]
name = "rource-core"
description = "Core visualization engine for Rource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
config-file = ["dep:serde", "dep:toml"]

[dependencies]
rource-math = { path = "../rource-math" }
regex-lite = "0.1"
rustc-hash = { workspace = true }

# Optional dependencies for config file support
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"
rource-vcs = { path = "../rource-vcs" }

# iai-callgrind requires Valgrind which only works on Linux
[target.'cfg(target_os = "linux")'.dev-dependencies]
iai-callgrind = "0.16"

[[bench]]
name = "scene_perf"
harness = false

[[bench]]
name = "easing_perf"
harness = false

# Barnes-Hut theta optimization benchmarks
[[bench]]
name = "barnes_hut_theta"
harness = false

# iai-callgrind benchmarks for deterministic instruction-count measurements
# These are ideal for CI as they don't suffer from timing variance
# NOTE: Only compiles on Linux (requires Valgrind)
[[bench]]
name = "iai_scene"
harness = false
