[package]
name = "rource-math"
description = "Mathematical types for Rource visualization engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable serde serialization support
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.10"

[[bench]]
name = "color_perf"
harness = false
