[package]
name = "rource-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rendering abstraction and software rasterizer for Rource"

[lints]
workspace = true

[features]
default = []
# WebGL2 backend for WASM (GPU-accelerated rendering in browsers)
webgl2 = ["wasm-bindgen", "web-sys", "js-sys"]
# wgpu backend for WebGPU (primary GPU path, native + WASM)
# Provides modern GPU rendering via wgpu-rs with automatic fallback to WebGL
wgpu = ["dep:wgpu", "dep:raw-window-handle", "dep:bytemuck", "dep:pollster"]
# Tracy tracing instrumentation for GPU/render profiling
tracy = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
rource-math = { path = "../rource-math" }

# Font rendering (pure Rust, no system dependencies)
fontdue = "0.9"

# Fast hash map (FxHash from rustc)
rustc-hash = "2"

# PNG image loading (minimal, pure Rust decoder)
png = "0.18"

# WebGL2 dependencies (optional, for WASM builds)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# wgpu backend dependencies (optional, for GPU-accelerated rendering)
# wgpu provides WebGPU support for WASM and native Vulkan/Metal/DX12
wgpu = { version = "24", optional = true }
raw-window-handle = { version = "0.6", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

# Tracing for profiling instrumentation (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "Window",
]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bloom_perf"
harness = false

[[bench]]
name = "blend_perf"
harness = false

[[bench]]
name = "visual_perf"
harness = false

[[bench]]
name = "render_scale"
harness = false

[[bench]]
name = "texture_batching"
harness = false
