[package]
name = "rource-vcs"
description = "Version control system log parsing for Rource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
iai-callgrind = { workspace = true }

[[bench]]
name = "vcs_parsing"
harness = false

[[bench]]
name = "iai_vcs"
harness = false
