[package]
name = "rource-vcs"
description = "Version control system log parsing for Rource"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable binary cache for 100x faster repeat loads of large repositories
cache = ["dep:bitcode"]

[dependencies]
# Binary serialization for visualization cache (optional)
# Adds ~11KB gzipped to WASM bundle, enables 100x faster repeat loads
bitcode = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"

# iai-callgrind requires Valgrind which only works on Linux
[target.'cfg(target_os = "linux")'.dev-dependencies]
iai-callgrind = "0.16"

[[bench]]
name = "vcs_parsing"
harness = false

# NOTE: Only compiles on Linux (requires Valgrind)
[[bench]]
name = "iai_vcs"
harness = false
